Issue #4071: ntpath.abspath returned an empty string for long unicode path.